--- a/package.json
+++ b/package.json
@@ -27,5 +27,9 @@
     },
     "dependencies": {
         "dart-sass": "^1.25.0"
+    },
+    "engines": {
+        "node": ">=10.0.0",
+        "npm": ">=6.0.0"
     }
 }
